--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
+    "@types/marked": "^4.0.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.7.0",
+    "marked": "^4.2.4",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.1",
     "typescript": "4.9.3"
   }
 }
