--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint-config-next": "^13.0.6",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.7.0",
     "marked": "^4.2.4",
-    "next": "13.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
     "react-swipeable": "^7.0.0",
     "swipe-listener": "^1.3.0",
