--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,8 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
+        env:
+          NEXT_PUBLIC_BASE_PATH: artaza
       - run: npm run export
       - run: touch ./out/.nojekyll
 
