--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@next/font": "^13.0.6",
     "@types/marked": "^4.0.7",
     "@types/node": "18.11.9",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.0.6",
     "gray-matter": "^4.0.3",
-    "highlight.js": "^11.7.0",
     "marked": "^4.2.4",
     "next": "^13.0.6",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
