--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@next/font": "^13.0.6",
+    "@types/aos": "^3.0.4",
     "@types/marked": "^4.0.7",
     "@types/node": "18.11.9",
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "aos": "^2.3.4",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.0.6",
     "gray-matter": "^4.0.3",
